--- a/src/views/dashboard.default.sales-management.track.html
+++ b/src/views/dashboard.default.sales-management.track.html
@@ -137,7 +137,7 @@
 
   <div class="modal-body">
     <div class="panel panel-default">
-      <div class="panel-heading">
+      <!-- <div class="panel-heading">
       <h3 class="panel-title">Supply Chain Representation</h3></div> -->
       <div class="panel-body">
         <div class="table-responsive">
