--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -11,7 +11,7 @@
 
                                 <button ng-click="addOrder()" class="btn-dashboard-green">Add Invoice</button>
                                 <button ng-click="addStage()" class="btn-dashboard">Print Invoice</button>
-                                <button ng-click="editOrder()" class="btn-dashboard">Edit Order</button>
+                                <button ng-click="deleteOrder()"class="btn-dashboard-red">Delete Order</button>
                                 <input type="text" name="search" placeholder="Search for an item" class="search">
 
                             </div>
@@ -250,4 +250,17 @@
             <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
         </div>
     </div>
+</script>
+
+<script type="text/ng-template" id="deleteOrderModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Delete Product</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this order? Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-dashboard-green" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-dashboard-red" type="button" ng-click="cancel()">Cancel</button>
+  </div>
 </script>
