--- a/src/views/dashboard.default.orders.html
+++ b/src/views/dashboard.default.orders.html
@@ -8,12 +8,10 @@
 
             <div class="panel panel-default">
               <div class="panel-body alignleft">
-
                 <button ng-click="addOrder()" class="btn-dashboard-green">Add Invoice</button>
                 <button ng-click="viewOrderDetail(selectedOrder)" class="btn-dashboard">View Order Details</button>
                 <button ng-click="deleteOrder()" class="btn-dashboard-red">Delete Order</button>
                 <input type="text" name="search" placeholder="Search for an item" class="search">
-
               </div>
             </div>
 
@@ -34,7 +32,7 @@
                   </thead>
                   <tbody>
                     <tr ng-repeat="order in orders track by $index">
-                      <td>{{$index+1}}</td>
+                      <td>{{order.invoiceNumber}}</td>
                       <td>{{order.customerName}}</td>
                       <td>{{order.status}}</td>
                       <td>{{order.date | date:'short' }}</td>
@@ -64,15 +62,13 @@
 
 <script type="text/ng-template" id="viewOrderDetailModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Customer Order on {{order.date | date:'yyyy-MM-dd' }}
-      <!--{{order.date.substring(0,10)}}-->
-    </h3>
+    <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
   </div>
-
+  <div class="col-lg-12">
   <div class="modal-body">
     <h4><b>Name:</b> {{order.firstName}} {{order.lastName}}</h4>
     <h4><b>Phone:</b> {{order.phone}}</h4>
-    <h4><b>Order Time:</b> {{order.date | date: 'hh:mm a'}}</h4>
+    <h4><b>Order Time:</b> {{order.date | date:'short' }}</h4>
   </div>
 
   <div class="panel panel-default">
@@ -82,7 +78,7 @@
 
     <div class="panel-body">
       <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table tableWhite">
           <thead>
             <tr>
               <th>Product</th>
@@ -91,17 +87,23 @@
               <th>Total Cost</th>
             </tr>
           </thead>
-          <tbody ng-repeat="item in order.items track by $index">
-            <tr>
-              <!--<td>{{$index + 1}}</td>-->
+          <tbody>
+            <tr ng-repeat="item in order.items track by $index">
               <td>{{item.product.name}}</td>
               <td>${{item.product.unitPrice}} / {{item.product.unit}}</td>
               <td>{{item.quantity}} {{item.product.unit}}</td>
               <td>{{item.product.unitPrice * item.quantity}}</td>
             </tr>
+          <tr>
+            <td><b>Total</b></td>
+            <td></td>
+            <td></td>
+            <td>${{OrderData.length}}</td>
+          </tr>
           </tbody>
         </table>
       </div>
+    </div>
     </div>
   </div>
   </div>
@@ -116,7 +118,7 @@
 <script type="text/ng-template" id="addOrderModal.html">
 
   <div class="modal-header">
-    <h3 class="modal-title text-center">Add an Order/Invoice</h3>
+    <h3 class="modal-title text-center">Add an Order</h3>
   </div>
   <div class="col-lg-12">
     <div class="modal-body">
@@ -182,7 +184,7 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table tableWhite">
                   <thead>
                     <tr>
                       <th>Product</th>
@@ -194,7 +196,6 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <!--ng-repeat="order in orders track by $index"-->
 
                     <tr ng-repeat="item in items track by $index">
                       <td>{{item.product.name}}</td>
