--- a/src/views/dashboard.default.products.html
+++ b/src/views/dashboard.default.products.html
@@ -57,13 +57,12 @@
         <fieldset class="form-group">
           <div class="col-lg-6">
             <label>Product Name</label>
-            <input class="form-control" ng-model="name" maxlength="25" placeholder="ex. Atlantic Cod">
-            <small class="text-muted">Maximum 25 characters.</small>
+            <input class="form-control" ng-model="name" maxlength="45" placeholder="ex. Atlantic Cod">
+            <small class="text-muted">Maximum 45 characters.</small>
           </div>
           <div class="col-lg-6">
             <label>Unit Price</label>
             <input class="form-control" ng-model="unitPrice" type="number" step="0.01" placeholder="ex. 4.50">
-            <small class="text-muted">Enter in $XX.xx format</small>
           </div>
         </fieldset>
         <fieldset class="form-group">
@@ -79,7 +78,7 @@
           <div class="col-lg-6">
             <label>Attach Product Photo</label>
             <input class="form-control" type="file" ngf-select ng-model="file" name="file">
-            <small class="text-muted">PNG and JPG files ONLY!</small>
+            <small class="text-muted">* PNG and JPG files only</small>
           </div>
           <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
           </div>
