--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -85,19 +85,24 @@
       </fieldset>
 
       <fieldset class="form-group">
-        <div class="col-lg-4">
-          <label>Street/Avenue &nbsp;<span ng-show="streetRequired" class="input-required"> * Required</span></label>
-          <input class="form-control" name="street" type="text" ng-model="street" placeholder="ex. 14484 123 Ave" required>
+        <div class="col-lg-3">
+          <label>Street/Avenue &nbsp;<span ng-show="addressRequired" class="input-required"> * Required</span></label>
+          <input class="form-control" name="address" type="text" ng-model="address" placeholder="ex. 14484 123 Ave" required>
           <!-- <small class="text-muted">Maximum 30 characters</small> -->
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-2">
           <label>City &nbsp;<span ng-show="cityRequired" class="input-required"> * Required</span></label>
           <input class="form-control" name="city"  type="text" ng-model="city" placeholder="ex. Surrey" required>
           <!-- <small class="text-muted">Maximum 30 characters</small> -->
         </div>
         <div class="col-lg-2">
-          <label>Zip &nbsp;<span ng-show="zipRequired" class="input-required"> * Required</span></label>
-          <input class="form-control" name="zip"  ng-model="zip" type="text" maxlength="6" placeholder="ex. V3N 1V4" required>
+          <label>State/Province &nbsp;<span ng-show="stateRequired" class="input-required"> * Required</span></label>
+          <input class="form-control" name="state"  type="text" ng-model="state" placeholder="ex. Michigan" required>
+          <!-- <small class="text-muted">Maximum 30 characters</small> -->
+        </div>
+        <div class="col-lg-2">
+          <label>Zip/Postal Code &nbsp;<span ng-show="postalCodeRequired" class="input-required"> * Required</span></label>
+          <input class="form-control" name="postalCode"  ng-model="postalCode" type="text" maxlength="6" placeholder="ex. V3N 1V4" required>
           <!-- <small class="text-muted">Maximum 30 characters</small> -->
         </div>
         <div class="col-lg-3">
@@ -114,8 +119,8 @@
       </fieldset>
       <fieldset>
         <div class="col-lg-12">
-          <label>Note</label>
-          <textarea class="form-control" placeholder="ex. Deliver to back gate" ng-model="note"></textarea>
+          <label>Notes</label>
+          <textarea class="form-control" placeholder="ex. Deliver to back gate" ng-model="notes"></textarea>
         </div>
       </fieldset>
 
