--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -247,6 +247,7 @@
   </div>
   <div class="modal-footer">
     <div class="alignright">
+        <button class="btn-status-default" type="button" ng-click="loadCustomer()">Load Customer</button>
       <button type="submit" class="btn-status-success" ng-click="ok()">Submit</button>
       <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
     </div>
@@ -318,6 +319,23 @@
 
 <!-- DELETE ORDER MODAL-->
 <script type="text/ng-template" id="deleteOrderModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Delete Product</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this order?
+      <br>
+      <br> Note that this will add back any inventory quantities from the batches corresponding to each item.</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn-status-success" type="button" ng-click="ok()">Yes</button>
+    <button class="btn-status-danger" type="button" ng-click="cancel()">Cancel</button>
+  </div>
+</script>
+
+
+<!-- DELETE ORDER MODAL-->
+<script type="text/ng-template" id="loadCustomerModal.html">
   <div class="modal-header">
     <h3 class="modal-title">Delete Product</h3>
   </div>
