--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -104,7 +104,7 @@
                             </div>
                             <div class="col-lg-9">
                               <input class="form-control" ng-disabled="(isLoading || isDisabled)" ng-model="postalCode" type="text" placeholder="i.e. N6G 1N1 or 48120"></input>
-                              <small class="text-muted">Change the postal/zip code of your fishery.</small>
+                              <small class="text-muted">Change the postal/postalCode code of your fishery.</small>
                             </div>
                           </div>
                         </fieldset>
