--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -11,10 +11,10 @@
                 <button ng-click="deleteOrder()" class="btn-status-danger">Delete</button>
                 <!-- <button ng-click="editOrder()" class="btn-status-default">Edit Order</button> -->
                 <button ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default">View Details</button>
-                <button ng-click="exportOrders()" ng-hide="isLoading" class="btn-status-default">Export</button>
+                <button ng-click="exportOrders()" ng-hide="isLoading" class="btn-status-default"><i class="fa fa-file-excel-o"></i> Export</button>
                 <button ng-show="isLoading" class="btn-status-success" type="button">Loading...</button>
-                <button ng-show="isFilterCleared" ng-click="addFilter()" class="btn-status-default">Filter <i class="fa fa-filter"></i></button>
-                <button ng-show="!isFilterCleared" ng-click="clearFilter()" class="btn-status-default">Clear Filter <i class="fa fa-filter"></i></button>
+                <button ng-show="isFilterCleared" ng-click="addFilter()" class="btn-status-default"><i class="fa fa-filter"></i> Filter</button>
+                <button ng-show="!isFilterCleared" ng-click="clearFilter()" class="btn-status-default"><i class="fa fa-filter"></i> Clear Filter</button>
               </div>
             </div>
             <div class="panel panel-body">
@@ -60,12 +60,18 @@
   <div class="modal-header">
     <h3 class="modal-title">Customer Order #{{order.invoiceNumber}}</h3>
   </div>
+
   <div class="modal-body">
-    <h4><b>Name :</b> {{order.customerName}}</h4>
-    <h4><b>Phone :</b> {{order.phone}}</h4>
-    <h4><b>Email :</b> {{order.email}}</h4>
-    <h4><b>Order Time :</b> {{order.date | date:'short' }}</h4>
-    <h4><b>Credit Terms :</b> {{order.creditTerms}}</h4>
+    <h4>Name: {{order.customerName}}</h4>
+    <h4>Phone: {{order.customerName}}</h4>
+    <h4>Name: {{order.customerName}}</h4>
+    <h4>Name: {{order.customerName}}</h4>
+
+      <h4><b>Name :</b> {{order.customerName}}</h4>
+      <h4><b>Phone :</b> {{order.phone}}</h4>
+      <h4><b>Email :</b> {{order.email}}</h4>
+      <h4><b>Order Time :</b> {{order.date | date:'short' }}</h4>
+      <h4><b>Credit Terms :</b> {{order.creditTerms}}</h4>
   </div>
 
   <div class="modal-body">
@@ -116,99 +122,99 @@
     <br>
     <form name="addOrderForm" ng-init="item=1">
       <div id="customerInfo.html" ng-show="item==1">
-      <fieldset class="form-group">
-        <div class="col-lg-6">
-          <label>Customer Name &nbsp;
-            <span class="input-required" ng-show="nameRequired"> * Required</span>
-          </label>
-          <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
-          <small class="text-muted">Maximum 30 characters</small>
-        </div>
-        <div class="col-lg-6">
-          <label>Email &nbsp;
-            <span class="input-required" ng-show="emailRequired"> * Required</span>
-          </label>
-          <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com" name="email" required>
-          <small class="text-muted">Please enter a valid email</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-4">
-          <label>Phone Number &nbsp;
-            <span class="input-required" ng-show="phoneRequired"> * Required</span>
-          </label>
-          <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required></input>
-          <small class="text-muted">No spaces or dashes</small>
-        </div>
-        <div class="col-lg-8">
-          <label>Notes</label>
-          <textarea class="form-control" ng-model="note" type="text" placeholder="ex. Deliver to back door" name="note"></textarea>
-        </div>
-      </fieldset>
-    </div>
+        <fieldset class="form-group">
+          <div class="col-lg-6">
+            <label>Customer Name &nbsp;
+              <span class="input-required" ng-show="nameRequired"> * Required</span>
+            </label>
+            <input class="form-control" type="text" maxlength="30" ng-model="customerName" name="name" placeholder="ex. John Doe" required>
+            <small class="text-muted">Maximum 30 characters</small>
+          </div>
+          <div class="col-lg-6">
+            <label>Email &nbsp;
+              <span class="input-required" ng-show="emailRequired"> * Required</span>
+            </label>
+            <input class="form-control" ng-model="email" placeholder="ex. fish@coastline.com" name="email" required>
+            <small class="text-muted">Please enter a valid email</small>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Phone Number &nbsp;
+              <span class="input-required" ng-show="phoneRequired"> * Required</span>
+            </label>
+            <input class="form-control" maxlength="10" ng-model="phone" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 7789195029" name="phone" required></input>
+            <small class="text-muted">No spaces or dashes</small>
+          </div>
+          <div class="col-lg-8">
+            <label>Notes</label>
+            <textarea class="form-control" ng-model="note" type="text" placeholder="ex. Deliver to back door" name="note"></textarea>
+          </div>
+        </fieldset>
+      </div>
 
 
-    <div id ="paymentInfo.html" ng-show="item==2">
-      <fieldset class="form-group">
-        <div class="col-lg-4">
-          <label>Invoice Number &nbsp;
-            <span class="input-required" ng-show="invoiceRequired"> * Required</span>
-          </label>
-          <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
-          <small class="text-muted">Maximum 10 characters</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Payment Method &nbsp;
-            <span class="input-required" ng-show="paymentRequired"> * Required</span>
-          </label>
-          <select ng-model="paymentMethod" class="form-control" name="payment" required>
-            <option value="Cash">Cash</option>
-            <option value="Cheque">Cheque</option>
-            <option value="Credit">Credit</option>
-            <option value="Debit">Debit</option>
-          </select>
-          <small class="text-muted">Choose from the dropdown list</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Status &nbsp;
-            <span class="input-required" ng-show="statusRequired"> * Required</span>
-          </label>
-          <select ng-model="status" class="form-control" name="status" required>
-            <option value="pending">Pending</option>
-            <option value="delivered">Delivered</option>
-            <option value="paid">Paid</option>
-            <option value="cancelled">Cancelled</option>
-            <option value="refunded">Refunded</option>
-          </select>
-          <small class="text-muted">Choose from the dropdown list</small>
-        </div>
-      </fieldset>
-      <fieldset class="form-group">
-        <div class="col-lg-4">
-          <label>Invoice Date &nbsp;
-            <span class="input-required" ng-show="dateRequired"> * Required</span>
-          </label>
-          <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
-          <small class="text-muted">YYYY-MM-DD</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Credit Terms (in Days) &nbsp;
-            <span class="input-required" ng-show="creditRequired"> * Required</span>
-          </label>
-          <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
-          <small class="text-muted">Enter the invoice terms</small>
-        </div>
-        <div class="col-lg-4">
-          <label>Order Currency</label>
-          <select ng-model="currency" class="form-control">
-            <option value="USD">USD</option>
-            <option value="CAD">CAD</option>
-            <option value="Euro">Euro</option>
-          </select>
-          <small class="text-muted">Choose the currency type.</small>
-        </div>
-      </fieldset>
-    </div>
+      <div id="paymentInfo.html" ng-show="item==2">
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Invoice Number &nbsp;
+              <span class="input-required" ng-show="invoiceRequired"> * Required</span>
+            </label>
+            <input class="form-control" maxlength="10" ng-model="invoiceNumber" type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="ex. 34937" name="invoice" required></input>
+            <small class="text-muted">Maximum 10 characters</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Payment Method &nbsp;
+              <span class="input-required" ng-show="paymentRequired"> * Required</span>
+            </label>
+            <select ng-model="paymentMethod" class="form-control" name="payment" required>
+              <option value="Cash">Cash</option>
+              <option value="Cheque">Cheque</option>
+              <option value="Credit">Credit</option>
+              <option value="Debit">Debit</option>
+            </select>
+            <small class="text-muted">Choose from the dropdown list</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Status &nbsp;
+              <span class="input-required" ng-show="statusRequired"> * Required</span>
+            </label>
+            <select ng-model="status" class="form-control" name="status" required>
+              <option value="pending">Pending</option>
+              <option value="delivered">Delivered</option>
+              <option value="paid">Paid</option>
+              <option value="cancelled">Cancelled</option>
+              <option value="refunded">Refunded</option>
+            </select>
+            <small class="text-muted">Choose from the dropdown list</small>
+          </div>
+        </fieldset>
+        <fieldset class="form-group">
+          <div class="col-lg-4">
+            <label>Invoice Date &nbsp;
+              <span class="input-required" ng-show="dateRequired"> * Required</span>
+            </label>
+            <input class="form-control" type="date" ng-model="date" placeholder="ex. 12:44 PM, 2016/01/14" name="date" required>
+            <small class="text-muted">YYYY-MM-DD</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Credit Terms (in Days) &nbsp;
+              <span class="input-required" ng-show="creditRequired"> * Required</span>
+            </label>
+            <input class="form-control" type="number" min="0" max="99999" ng-model="creditTerms" placeholder="ex. 12" name="credit" required>
+            <small class="text-muted">Enter the invoice terms</small>
+          </div>
+          <div class="col-lg-4">
+            <label>Order Currency</label>
+            <select ng-model="currency" class="form-control">
+              <option value="USD">USD</option>
+              <option value="CAD">CAD</option>
+              <option value="Euro">Euro</option>
+            </select>
+            <small class="text-muted">Choose the currency type.</small>
+          </div>
+        </fieldset>
+      </div>
 
       <hr class="short">
       <div class="table-responsive">
