--- a/src/views/fishery-setup.html
+++ b/src/views/fishery-setup.html
@@ -1,23 +1,27 @@
-<div class="container">
-   <div class="row">
-     <div class="col-md-4 col-md-offset-4">
-       <div class="login-panel panel panel-default">
-         <div class="panel-heading">
-           <h3 class="panel-title">Fishery Name</h3>
-         </div>
-         <div class="panel-body">
-           <form role="form" ng-controller="loginCtrl" ng-submit="createFishery()">
-             <fieldset>
-               <div class="form-group">
-                 <input type="name" class="form-control" id="name" ng-model="fisheryName" placeholder="Your fishery name..." autofocus>
-               </div>
+<div class="login-body">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <div class="panel-login panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Fishery Name</h3>
+          </div>
+          <div class="panel-body">
+            <form role="form" ng-controller="loginCtrl" ng-submit="createFishery()">
+              <fieldset>
+                <div class="form-group">
+                  <input type="name" class="form-control" id="name" ng-model="fisheryName" placeholder="Your fishery name..." autofocus>
+                </div>
 
-               <!-- Change this to a button or input when using this as a form -->
-               <center><button type="submit" class="btn-status-success">Submit</button></center>
-             </fieldset>
-           </form>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+                <!-- Change this to a button or input when using this as a form -->
+                <center>
+                  <button type="submit" class="btn-status-success">Submit</button>
+                </center>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
