--- a/src/views/forgot-password.html
+++ b/src/views/forgot-password.html
@@ -1,26 +1,27 @@
 <div class="login-body">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5 col-centered">
+        <div class="panel-login panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Enter Username/Email</h3>
+          </div>
+          <div class="panel-body">
+            <form role="form" ng-controller="loginCtrl" ng-submit="sendResetLink()">
+              <fieldset>
+                <div class="form-group">
+                  <input type="name" class="form-control" id="name" ng-model="username" placeholder="coastalfishery" autofocus>
+                </div>
 
-<div class="container">
-   <div class="row">
-     <div class="col-md-5 col-centered">
-       <div class="panel-login panel panel-default">
-         <div class="panel-heading">
-           <h3 class="panel-title">Enter Username/Email</h3>
-         </div>
-         <div class="panel-body">
-           <form role="form" ng-controller="loginCtrl" ng-submit="sendResetLink()">
-             <fieldset>
-               <div class="form-group">
-                 <input type="name" class="form-control" id="name" ng-model="username" placeholder="coastalfishery" autofocus>
-               </div>
-
-               <!-- Change this to a button or input when using this as a form -->
-               <center><button type="submit" class="btn-status-default">Send Reset Link</button></center>
-             </fieldset>
-           </form>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
+                <!-- Change this to a button or input when using this as a form -->
+                <center>
+                  <button type="submit" class="btn-status-default">Send Reset Link</button>
+                </center>
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
